--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "inherits": "^2.0.4",
     "is-fullwidth-code-point": "^1.0.0",
     "isarray": "^1.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -97,7 +98,6 @@
     "yallist": "^4.0.0",
     "yup": "^0.32.9"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
