--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "18.x"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "abbrev": "^1.1.1",
     "agent-base": "^6.0.2",
     "ansi-regex": "^2.1.1",
@@ -67,7 +68,9 @@
     "nanoclone": "^0.2.1",
     "netlify-lambda": "^2.0.16",
     "node-addon-api": "^3.2.1",
+    "node-device-detector": "^2.0.12",
     "node-fetch": "^2.6.1",
+    "node-mailjet": "^6.0.2",
     "node-telegram-bot-api": "^0.53.0",
     "nodemailer": "^6.6.1",
     "nopt": "^5.0.0",
@@ -108,5 +111,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.21"
+  }
 }
