--- a/package.json
+++ b/package.json
@@ -4,103 +4,27 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "abbrev": "^1.1.1",
-    "agent-base": "^6.0.2",
-    "ansi-regex": "^2.1.1",
-    "ansi-styles": "^4.3.0",
-    "aproba": "^1.2.0",
-    "are-we-there-yet": "^1.1.5",
     "async": "^3.2.0",
-    "axios": "^0.21.1",
-    "balanced-match": "^1.0.2",
+    "axios": "^1.6.3",
     "bcrypt": "^5.0.1",
-    "brace-expansion": "^1.1.11",
-    "chalk": "^4.1.1",
-    "chownr": "^2.0.0",
-    "code-point-at": "^1.1.0",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "concat-map": "^0.0.1",
-    "console-control-strings": "^1.1.0",
     "cookie-parser": "^1.4.5",
-    "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
-    "debug": "^4.3.1",
-    "delegates": "^1.0.0",
-    "detect-libc": "^1.0.3",
     "dotenv": "^10.0.0",
-    "email-existence": "^0.1.6",
-    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
-    "express-validator": "^6.11.1",
-    "fs-minipass": "^2.1.0",
-    "fs.realpath": "^1.0.0",
-    "gauge": "^2.7.4",
-    "glob": "^7.1.7",
-    "has-flag": "^4.0.0",
-    "has-unicode": "^2.0.1",
     "helmet": "^4.6.0",
-    "https-proxy-agent": "^5.0.0",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-fullwidth-code-point": "^1.0.0",
-    "isarray": "^1.0.0",
     "isomorphic-fetch": "^3.0.0",
     "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "lru-cache": "^6.0.0",
-    "make-dir": "^3.1.0",
-    "minimatch": "^3.0.4",
-    "minipass": "^3.1.3",
-    "minizlib": "^2.1.2",
-    "mkdirp": "^1.0.4",
     "moment": "^2.29.1",
     "mongoose": "^5.12.12",
-    "ms": "^2.1.2",
-    "nanoclone": "^0.2.1",
-    "netlify-lambda": "^2.0.16",
-    "node-addon-api": "^3.2.1",
     "node-device-detector": "^2.0.12",
-    "node-fetch": "^2.6.1",
-    "node-mailjet": "^6.0.2",
-    "node-telegram-bot-api": "^0.53.0",
+    "node-telegram-bot-api": "^0.63.0",
     "nodemailer": "^6.6.1",
-    "nopt": "^5.0.0",
-    "npmlog": "^4.1.2",
-    "number-is-nan": "^1.0.1",
-    "object-assign": "^4.1.1",
-    "once": "^1.4.0",
-    "path-is-absolute": "^1.0.1",
-    "process-nextick-args": "^2.0.1",
-    "property-expr": "^2.0.4",
-    "readable-stream": "^2.3.7",
-    "regenerator-runtime": "^0.13.7",
-    "rimraf": "^3.0.2",
-    "safe-buffer": "^5.1.2",
-    "semver": "^7.3.5",
-    "set-blocking": "^2.0.0",
-    "signal-exit": "^3.0.3",
-    "snyk": "^1.621.0",
     "speakeasy": "^2.0.0",
-    "string_decoder": "^1.1.1",
-    "string-width": "^1.0.2",
-    "strip-ansi": "^3.0.1",
-    "supports-color": "^7.2.0",
-    "tar": "^6.1.0",
-    "toposort": "^2.0.2",
-    "util-deprecate": "^1.0.2",
-    "uuid": "^8.3.2",
-    "validator": "^13.6.0",
-    "wide-align": "^1.1.3",
-    "wrappy": "^1.0.2",
-    "xss-filters": "^1.2.7",
-    "yallist": "^4.0.0",
-    "yup": "^0.32.9"
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -110,6 +34,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^3.0.2"
   }
 }
